--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "bootstrap": "~3.3.4",
     "jquery": "~2.1.3",
     "bootstrap-social": "~4",
-    "d3": "~3.5.5"
+    "d3": "~3.5.5",
+    "bootstrap-select": "~1.10.0",
+    "select2-bootstrap-css": "1.4.6"
   }
 }
